tests/snapshots/yaml_suite_snapshots__yaml_suite_4ABK_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow Mapping Separate Values
  from: "http://www.yaml.org/spec/1.2/spec.html#id2791704"
  tags: flow mapping
  yaml: "{\nunquoted : \"separate\",\nhttp://foo.com,\nomitted value:,\n}\n"
  tree: "+STR\n +DOC\n  +MAP {}\n   =VAL :unquoted\n   =VAL \"separate\n   =VAL :http://foo.com\n   =VAL :\n   =VAL :omitted value\n   =VAL :\n  -MAP\n -DOC\n-STR\n"
  dump: "unquoted: \"separate\"\nhttp://foo.com: null\nomitted value: null\n"
