tests/snapshots/yaml_suite_snapshots__yaml_suite_4EJS_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid tabs as indendation in a mapping
  from: "https://github.com/nodeca/js-yaml/issues/80"
  tags: error mapping whitespace
  fail: true
  yaml: "---\na:\n———»b:\n———»———»c: value\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n"
