tests/snapshots/yaml_suite_snapshots__yaml_suite_4EJS_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "https://github.com/nodeca/js-yaml/issues/80"
  name: Invalid tabs as indendation in a mapping
  tags: error mapping whitespace
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :a\n"
  yaml: "---\na:\n———»b:\n———»———»c: value\n"
